k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yaml-herder
  labels:
    app.kubernetes.io/part-of: yaml-herder
