k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: yaml-herder
  name: demo-api
spec:
  selector: { app: demo-api }
  ports:
    - port: 80
      targetPort: 5678
